# eq-mac-cli

./: Cargo.toml  README.md
examples/: sample-preset.txt  samsung.apo.txt
src/: cli.rs  lib.rs  main.rs
src/commands/: add.rs  audio.rs  autostart.rs  daemon.rs  delete.rs  disable.rs  doctor.rs  enable.rs  install_driver.rs  interactive.rs  list.rs  mod.rs  rename.rs  show.rs  status.rs  template.rs
src/eq/: dsp.rs  editor.rs  mod.rs  model.rs  parser.rs  validate.rs
src/storage/: active.rs  autostart.rs  config.rs  daemon_state.rs  index.rs  mod.rs  paths.rs  presets.rs
